# SAMPL-containers

./: .gitignore  LicenseAndCodePrivacy.md  README.md
docking/: README.md
docking/scoring/: README.md
ever_given/: Pipfile  run.py  setup.cfg
logd/: BuildYourOwnLogDContainer.md  README.md
logd/examples/: README.md
logd/scoring/: README.md
logp/: README.md
logp/examples/: README.md
logp/scoring/: README.md
pose_prediction/: BuildYourOwnPosePredictionContainer.md
pose_prediction/examples/: README.md
tutorials/: BuildYourOwnDockingContainer.md  BuildYourOwnLogDContainer.md  BuildYourOwnPosePredictionContainer.md  BuildingYourOwnVirtualScreeningContainer.md  BujildYourOwnDockingContainer.md  CondaEnvironmentInstructions.md  ContainerRequirements.md  DockingContainerRequirements.md  DockingContainerTips.md  LicenseAndCodePrivacy.md  LogPContainerRequirements.md  Manifest.md  OutputRequirements.md  README.md  SingularityTutorial.md  SpecialArguments.md  UploadToSAMPLPrivateContainerRegistry.md  UploadToSamplChallengesWebsite.md  WritingFailsafeContainers.md  ever_givenUsage.md
tutorials/adv/: Dockerfile  autodock.py  main.py  run_autodock.py  setup.py
tutorials/adv-base/: Dockerfile  environment.yml  setup.py
tutorials/adv-tutorial/: Dockerfile  autodock.py
tutorials/ever_given/: Pipfile  README.md  run.py  setup.cfg
tutorials/ever_given/ever_given/: wrapper.py
tutorials/ever_given/tests/: test_volume.py
tutorials/ever_given/tests/data/: ChEBI_16716.mdl
virtual_screening/: BuildYourOwnVirtualScreeningContainer.md
(+73 files in other folders)
