[metadata]
name = ever_given
version = 0.0.6
author = Mike Henry
author_email = mhenry5@uci.edu
description = A small wrapper around the docker sdk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samplchallenges/SAMPL-league/tree/main/ever_given
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
packages = ever_given
python_requires = >=3.6
install_requires =
    docker
